[package]
edition.workspace = true
name = "katana-slot-controller"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account_sdk = { git = "https://github.com/cartridge-gg/controller-rs", rev = "242e7bd" }
katana-primitives.workspace = true
