[package]
edition.workspace = true
license-file.workspace = true
name = "katana-explorer"
repository.workspace = true
version.workspace = true

[features]
[dependencies]
katana-tasks.workspace = true

anyhow.workspace = true
axum = "0.6.20"
bytes.workspace = true
http.workspace = true
http-body.workspace = true
hyper.workspace = true
jsonrpsee = { workspace = true, features = [ "server-core" ], optional = true }
notify = "6.1.1"
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
tiny_http = "0.12"
tokio = { workspace = true, features = [ "full" ] }
tower.workspace = true
tower-http = { workspace = true, features = [ "cors" ] }
tracing.workspace = true
url.workspace = true
urlencoding = "2.1.2"

rust-embed = { version = "6.8.1", features = [ "debug-embed" ] }

[dev-dependencies]
katana-runner.workspace = true
reqwest.workspace = true
tempfile.workspace = true
