[package]
edition.workspace = true
license.workspace = true
name = "katana-explorer"
repository.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
http.workspace = true
http-body.workspace = true
jsonrpsee = { workspace = true, features = [ "server-core" ], optional = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
thiserror.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

rust-embed = { version = "6.8", features = [ "debug-embed" ] }

[dev-dependencies]
katana-runner.workspace = true
reqwest.workspace = true
tempfile.workspace = true
