[package]
edition.workspace = true
license.workspace = true
name = "katana-gateway"
repository.workspace = true
version.workspace = true

[features]
default = ["server"]
server = [
    "dep:katana-executor",
    "dep:katana-metrics",
    "dep:katana-rpc",
    "dep:katana-rpc-api",
    "dep:katana-provider-api",
    "dep:axum",
    "dep:metrics",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:http-body",
]

[dependencies]
katana-primitives.workspace = true
katana-rpc-types.workspace = true
serde-utils.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
url.workspace = true
tracing.workspace = true

# Server dependencies
katana-executor = { workspace = true, optional = true }
katana-metrics = { workspace = true, optional = true }
katana-rpc = { workspace = true, optional = true }
katana-rpc-api = { workspace = true, optional = true }
katana-provider-api = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }

clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
katana-utils.workspace = true
rstest.workspace = true
similar-asserts.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = "0.6"

# This binary is mainly for debugging purposes only
[[bin]]
name = "gateway"
path = "src/bin/client.rs"
