[package]
description = "Genesis configuration for Katana"
edition.workspace = true
name = "katana-genesis"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64.workspace = true
cairo-vm.workspace = true
derive_more.workspace = true
# katana-contracts removed to avoid cyclic dependency
katana-primitives = { workspace = true, features = ["serde"] }
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
starknet.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
rstest.workspace = true