[package]
edition.workspace = true
license-file.workspace = true
name = "katana-grpc"
repository.workspace = true
version.workspace = true

[dependencies]
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
tonic.workspace = true

[dev-dependencies]
serde_json = "1.0"
prost-types = "0.12"

[build-dependencies]
tonic-build.workspace = true

[features]
default = ["server"]
server = ["tonic/transport"]
client = []
