[package]
edition.workspace = true
license-file.workspace = true
name = "katana-grpc"
repository.workspace = true
version.workspace = true

[dependencies]
# gRPC dependencies
tonic.workspace = true
tonic-reflection = "0.11"
prost.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true

# Internal dependencies
katana-chain-spec.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-pool.workspace = true
katana-core.workspace = true
katana-executor.workspace = true
katana-gas-price-oracle.workspace = true
katana-tasks.workspace = true
katana-rpc-types.workspace = true
katana-rpc-types-builder.workspace = true
katana-rpc-server.workspace = true
katana-rpc-api.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build.workspace = true
