[package]
edition.workspace = true
license.workspace = true
name = "katana-log"
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

# OpenTelemetry dependencies for trace context propagation
anyhow.workspace = true
opentelemetry.workspace = true
opentelemetry-gcloud-trace.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp = { version = "0.30.0", features = [ "grpc-tonic" ] }
opentelemetry-stackdriver.workspace = true
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = { version = "0.31.0" }
