[package]
edition.workspace = true
license.workspace = true
name = "katana-messaging"
repository.workspace = true
version.workspace = true

[features]
# Exposes `crate::testing::{MockCollector, ManualTrigger, ...}` so downstream
# crates can drive `MessageStream`/`MessagingServer` in tests without spinning
# up a real settlement chain. The same module is unconditionally available
# inside the crate's own tests.
testing = []

[dependencies]
katana-chain-spec.workspace = true
katana-pool.workspace = true
katana-primitives = { workspace = true, features = [ "arbitrary" ] }

anyhow.workspace = true
auto_impl.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

alloy-primitives = { workspace = true, features = [ "serde" ] }
alloy-sol-types = { workspace = true, default-features = false, features = [ "json" ] }
alloy-contract = { workspace = true, default-features = false }
alloy-network = { workspace = true, default-features = false }
alloy-provider = { workspace = true, default-features = false, features = [ "reqwest", "reqwest-rustls-tls" ] }
alloy-rpc-types-eth = { workspace = true, default-features = false }
alloy-transport = { workspace = true, default-features = false }
