[package]
edition.workspace = true
license.workspace = true
name = "katana-messaging"
repository.workspace = true
version.workspace = true

[features]
# Exposes `crate::testing::{MockCollector, ManualTrigger, ...}` so downstream
# crates can drive `MessageStream`/`MessagingServer` in tests without spinning
# up a real settlement chain. The same module is unconditionally available
# inside the crate's own tests.
testing = []

[dependencies]
katana-pool.workspace = true
katana-primitives = { workspace = true, features = [ "arbitrary" ] }
katana-provider.workspace = true
katana-rpc-types.workspace = true
katana-starknet.workspace = true

anyhow.workspace = true
auto_impl.workspace = true
futures.workspace = true
serde.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

alloy-primitives = { workspace = true, features = [ "serde" ] }
alloy-sol-types = { workspace = true, default-features = false, features = [ "json" ] }
alloy-contract = { workspace = true, default-features = false }
alloy-network = { workspace = true, default-features = false }
alloy-provider = { workspace = true, default-features = false, features = [ "reqwest", "reqwest-rustls-tls" ] }
alloy-rpc-types-eth = { workspace = true, default-features = false }
alloy-transport = { workspace = true, default-features = false }

[dev-dependencies]
katana-contracts.workspace = true
katana-utils = { workspace = true, features = [ "node" ] }

alloy-node-bindings = "1.0.24"
alloy-provider = { workspace = true, default-features = false, features = [ "anvil-node", "reqwest", "reqwest-rustls-tls" ] }

cainome.workspace = true
cairo-lang-starknet-classes.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde_json.workspace = true
