[package]
edition.workspace = true
license.workspace = true
name = "katana-node"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-db.workspace = true
katana-executor.workspace = true
katana-gateway.workspace = true
katana-gas-price-oracle.workspace = true
katana-messaging.workspace = true
katana-metrics.workspace = true
katana-pipeline.workspace = true
katana-pool.workspace = true
katana-pool-api.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc.workspace = true
katana-rpc-api.workspace = true
katana-rpc-types.workspace = true
katana-stage.workspace = true
katana-tasks.workspace = true
katana-tracing.workspace = true

anyhow.workspace = true
futures.workspace = true
http.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tower = { workspace = true, features = [ "full" ] }
tower-http = { workspace = true, features = [ "full" ] }
tracing.workspace = true
url.workspace = true

strum.workspace = true
strum_macros.workspace = true

tokio={ workspace = true, features = ["time"], default-features = false }
katana-starknet.workspace = true
alloy-provider = { workspace = true, default-features = false, features = [ "reqwest", "reqwest-rustls-tls" ] }

[features]
cartridge = [ "katana-rpc-api/cartridge", "katana-rpc/cartridge" ]
explorer = [ "katana-rpc/explorer" ]
native = [ "katana-executor/native" ]
