[package]
edition.workspace = true
license.workspace = true
name = "katana-node"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-db.workspace = true
katana-executor.workspace = true
katana-gateway-server.workspace = true
katana-gateway-client.workspace = true
katana-gateway-types.workspace = true
katana-gas-price-oracle.workspace = true
katana-messaging.workspace = true
katana-metrics.workspace = true
katana-pipeline.workspace = true
katana-pool.workspace = true
katana-pool-api.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-server.workspace = true
katana-rpc-api.workspace = true
katana-rpc-types.workspace = true
katana-rpc-client.workspace = true
katana-stage.workspace = true
katana-tasks.workspace = true

anyhow.workspace = true
starknet.workspace = true
futures.workspace = true
http.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

strum.workspace = true
strum_macros.workspace = true

tokio = { workspace = true, features = [ "time" ] }
katana-starknet.workspace = true
alloy-provider = { workspace = true, default-features = false, features = [ "reqwest", "reqwest-rustls-tls" ] }

[features]
cartridge = [ "katana-rpc-api/cartridge", "katana-rpc-server/cartridge" ]
explorer = [ "katana-rpc-server/explorer" ]
native = [ "katana-executor/native" ]
