[package]
edition.workspace = true
license.workspace = true
name = "katana-node"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-db.workspace = true
katana-executor.workspace = true
katana-gateway-server.workspace = true
katana-gateway-client.workspace = true
katana-gateway-types.workspace = true
katana-gas-price-oracle.workspace = true
katana-grpc = { workspace = true, optional = true }
katana-messaging.workspace = true
katana-metrics.workspace = true
katana-pipeline.workspace = true
katana-pool.workspace = true
katana-pool-api.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-genesis = { workspace = true, optional = true }
katana-rpc-server.workspace = true
katana-rpc-api.workspace = true
katana-rpc-client.workspace = true
katana-rpc-types.workspace = true
katana-stage.workspace = true
katana-tasks.workspace = true
katana-tee = { workspace = true, optional = true }

anyhow.workspace = true
backon.workspace = true
num-traits.workspace = true
futures.workspace = true
http.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
ark-ff = { version = "0.4.2", optional = true }

strum.workspace = true
strum_macros.workspace = true

stark-vrf = { workspace = true, optional = true }
starknet = { workspace = true, optional = true }

tokio = { workspace = true, features = [ "time" ] }

[features]
paymaster = [
	"dep:katana-genesis",
	"dep:starknet",
	"katana-rpc-api/paymaster",
	"katana-rpc-server/paymaster",
]
vrf = [
	"paymaster",
	"dep:stark-vrf",
	"dep:ark-ff",
]
cartridge = [
	"katana-rpc-api/cartridge",
	"katana-rpc-server/cartridge",
	"paymaster",
	"vrf",
]
explorer = ["katana-rpc-server/explorer"]
grpc = ["dep:katana-grpc"]
native = ["katana-executor/native"]
tee = ["dep:katana-tee", "katana-rpc-api/tee", "katana-rpc-server/tee"]
tee-snp = ["tee", "katana-tee/snp"]

[dev-dependencies]
tempfile.workspace = true
