[package]
edition.workspace = true
license.workspace = true
name = "katana-optimistic"
repository.workspace = true
version.workspace = true

[dependencies]
katana-executor = { workspace = true, features = [ "blockifier" ] }
katana-pool.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-tasks.workspace = true

anyhow.workspace = true
backon.workspace = true
futures.workspace = true
parking_lot.workspace = true
starknet.workspace = true
tokio.workspace = true
