[package]
name = "katana-paymaster"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
katana-genesis.workspace = true
katana-primitives.workspace = true
katana-rpc-client.workspace = true
katana-rpc-types.workspace = true

anyhow.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
