[package]
name = "katana-paymaster"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true
katana-contracts.workspace = true

http.workspace = true
jsonrpsee = { workspace = true, features = ["macros", "server", "client", "http-client"] }
paymaster-rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
katana-genesis.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
