[package]
description = "Katana's embedded TEE settlement service."
edition.workspace = true
license-file.workspace = true
name = "katana-settlement"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-metrics.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-provider-api.workspace = true
katana-rpc-types.workspace = true
katana-tee.workspace = true

piltover.workspace = true

amd-sev-snp-attestation-prover = { workspace = true, features = [ "sp1" ] }
amd-sev-snp-attestation-verifier.workspace = true
garaga_rs.workspace = true
x509-verifier-rust-crypto.workspace = true

alloy-primitives.workspace = true
async-trait.workspace = true
metrics.workspace = true
cainome.workspace = true
hex.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
# direct table writes to advance the chain head in the settle-interval tests
katana-db.workspace = true
katana-genesis.workspace = true
# test-util: paused-clock tests of the submission-retry loop (`start_paused`).
tokio = { workspace = true, features = [ "test-util" ] }
