[package]
name = "katana-sharding"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-db.workspace = true
katana-executor.workspace = true
katana-gas-price-oracle.workspace = true
katana-pool.workspace = true
katana-pool-api.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-client.workspace = true
katana-rpc-server.workspace = true
katana-rpc-types.workspace = true
katana-rpc-api.workspace = true
katana-tasks.workspace = true

anyhow.workspace = true
futures.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
