[package]
description = "TEE (Trusted Execution Environment) support for Katana"
edition.workspace = true
name = "katana-tee"
version.workspace = true

[dependencies]
katana-primitives.workspace = true

cainome.workspace = true
bincode = { workspace = true, optional = true }
clap = { workspace = true, default-features = false, features = [ "derive" ] }
serde.workspace = true
sev = { workspace = true, optional = true }
sev-snp = { workspace = true, optional = true }
thiserror.workspace = true
katana-tracing.workspace = true
katana-starknet.workspace = true

# AMD SEV-SNP SDK for attestation proving
amd-sev-snp-attestation-prover = { workspace = true, features = [ "sp1" ] }
amd-sev-snp-attestation-verifier.workspace = true
x509-verifier-rust-crypto.workspace = true

starknet.workspace = true
alloy-primitives.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
hex.workspace = true
url.workspace = true
tokio.workspace = true

# Garaga for Starknet calldata generation
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", rev = "191ce19" }

# Cryptographic hashing
sha2 = "0.10"

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
tempfile.workspace = true

[features]
default = [  ]
snp = [ "dep:bincode", "dep:sev-snp" ]
# Exposes `MockAttester` and `AttesterKind::Mock` for use by integration test
# crates that need to serve `tee_generateQuote` without real SEV-SNP hardware.
# Not intended for production binaries.
tee-mock = []
