[package]
description = "TEE (Trusted Execution Environment) support for Katana"
edition.workspace = true
name = "katana-tee"
version.workspace = true

[[bin]]
name = "kds-client"
path = "bin/kds.rs"

[dependencies]
katana-chain-spec.workspace = true
katana-primitives.workspace = true
katana-provider-api.workspace = true
katana-rpc-types.workspace = true

anyhow.workspace = true
bincode = { workspace = true, optional = true }
clap = { workspace = true, default-features = false, features = [ "derive" ] }
serde.workspace = true
sev = { workspace = true, optional = true }
sev-snp = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
zeroize = { workspace = true, optional = true }
katana-tracing.workspace = true
katana-starknet.workspace = true

# AMD SEV-SNP SDK for attestation proving
amd-sev-snp-attestation-prover = { workspace = true, features = [ "sp1" ] }
amd-sev-snp-attestation-verifier.workspace = true
x509-verifier-rust-crypto.workspace = true

starknet.workspace = true
alloy-primitives.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
hex.workspace = true
url.workspace = true
tokio.workspace = true

# Cryptographic hashing
sha2 = "0.10"

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[features]
default = [  ]
snp = [ "dep:bincode", "dep:sev-snp", "dep:zeroize" ]
# Exposes `MockAttester` and `AttesterKind::Mock` for use by integration test
# crates that need to serve `tee_generateQuote` without real SEV-SNP hardware.
# Not intended for production binaries.
mock = []

# `snp-derivekey`: tiny standalone binary run once in the measured SEV-SNP initrd
# to derive a 32-byte key from SNP_GET_DERIVED_KEY and emit it on stdout. Used by
# the initrd's LUKS unseal flow. Only built when the `snp` feature is enabled.
[[bin]]
name = "snp-derivekey"
path = "src/bin/derivekey.rs"
required-features = [ "snp" ]
