[package]
name = "tee_deploy"
version = "0.1.0"
edition = "2021"
description = "Declare and deploy AMDTeeRegistry + KatanaTee on Starknet"

[[bin]]
name = "tee_deploy"
path = "src/main.rs"

[dependencies]
starknet-rust = { path = "../starknet-rust" }
starknet-core = { package = "starknet-rust-core", path = "../starknet-rust/starknet-rust-core" }
starknet_api = "0.16.0-rc.3"
cairo-lang-starknet-classes = "=2.12.3"
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
url = "2"
