[package]
edition.workspace = true
license.workspace = true
name = "katana-test-utils"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-starknet-classes.workspace = true
katana-primitives.workspace = true
serde_json.workspace = true
starknet.workspace = true
