[package]
edition.workspace = true
license.workspace = true
name = "katana-trie"
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true

anyhow.workspace = true
bitvec.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
