[package]
edition.workspace = true
license.workspace = true
name = "katana-utils"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-executor.workspace = true
katana-node.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc = { workspace = true, features = [ "client" ] }

anyhow.workspace = true
starknet.workspace = true
