[package]
edition.workspace = true
license.workspace = true
name = "katana-utils"
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true
katana-rpc-api.workspace = true
katana-rpc-client.workspace = true
katana-rpc-types.workspace = true
katana-utils-macro = { path = "macro" }

anyhow.workspace = true
arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "macros", "signal", "time" ], default-features = false }

# node-only dependencies
katana-chain-spec = { workspace = true, optional = true }
katana-core = { workspace = true, optional = true }
katana-executor = { workspace = true, optional = true }
katana-node = { workspace = true, optional = true }
katana-provider = { workspace = true, optional = true }
katana-rpc-server = { workspace = true, optional = true }
starknet = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[features]
cartridge = [  ]
explorer = [ "katana-node/explorer", "node" ]
node = [
	"katana-chain-spec",
	"katana-core",
	"katana-executor",
	"katana-node",
	"katana-provider",
	"katana-rpc-server",
	"starknet",
	"tempfile",
]
