[package]
edition.workspace = true
license.workspace = true
name = "katana-utils"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-executor.workspace = true
katana-node.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-server.workspace = true
katana-rpc-api.workspace = true
katana-rpc-client.workspace = true
katana-rpc-types.workspace = true
katana-utils-macro = { path = "macro" }

anyhow.workspace = true
arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "macros", "signal", "time" ], default-features = false }

[features]
explorer = [ "katana-node/explorer" ]
