[package]
edition.workspace = true
license.workspace = true
name = "cartridge-e2e-test"
repository.workspace = true
version.workspace = true

[dependencies]
cartridge.workspace = true
katana-chain-spec.workspace = true
katana-genesis.workspace = true
katana-paymaster.workspace = true
katana-primitives.workspace = true
katana-rpc-types.workspace = true
katana-sequencer-node = { workspace = true, features = ["cartridge"] }
katana-slot-controller.workspace = true
katana-utils = { workspace = true, features = ["node"] }

axum.workspace = true
jsonrpsee = { workspace = true, features = ["client"] }
serde_json.workspace = true
starknet.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true
